--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ nav {
       rgba(2, 6, 23, 0.9) 0%,
       rgba(15, 23, 42, 0.8) 100%
     ),
-    url("https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80");
+    url("asset/backround.avif");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
